Fixed shift+select bug by adding projectionIndex to node

--- a/packages/list/src/tree.module.css
+++ b/packages/list/src/tree.module.css
@@ -21,6 +21,7 @@
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    overscroll-behavior: contain;
 }
 
 .item-container {
